--- a/Quote-Generator/style.css
+++ b/Quote-Generator/style.css
@@ -23,12 +23,12 @@ body {
   max-width: 900px;
   padding: 20px 30px;
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: #fff;
   box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
 
-.quote-text {
-  font-size: 2.75rem;
+#quote {
+  font-size: 2.5rem;
 }
 
 .long-quote {
